[package]
name = "RedisTest"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }

# JSON & Serialization
serde = { version = "1.0", features = ["derive"] }

# Redis (CRITICAL: features must be enabled!)
redis = { version = "0.32.7", features = ["tokio-comp", "aio"] }

# Utilities
anyhow = "1.0"
prost = "0.14.1"
serde_json = "1.0.145"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
prost-build = "0.14.1"